Chat avatars align fix

--- a/client/main.css
+++ b/client/main.css
@@ -3443,7 +3443,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .sidebar__btn .fa-lg{vertical-align:0}
 .banner{border:4px solid #fff;margin:-32px -40px;height:120px}
-.avatar-photo{clear:both;top:-40px;margin-bottom:18px;position:relative}
+.avatar-photo{clear:both;top:-20px;margin-bottom:18px;position:relative}
   .avatar-photo img{border-radius:50%;border:4px solid #fff;display:block;margin:0 auto -40px;top:-40px;width:104px;height:104px}
 .avatar-small{padding:10px!important}
   .avatar-small img{border-radius:50%;box-shadow:0 0 0 3px #f2f2f2;width:50px;height:50px}
@@ -3944,6 +3944,7 @@ a{color:#ff9100;
 .modal h3{font-weight:normal}
 .modal .collection .collection-item:hover{background-color:#f9f9f9;cursor:pointer}
 .modal .collection .collection-item.avatar i.circle{background-color:#ff9100}
+.collection .collection-item.avatar .circle>div{line-height:49px!important}
 .btn-floating{background-color:#ff9100;-webkit-transition:none;-o-transition:none;transition:none} /* we need these transitions to avoid hover-out transition */
   .btn-floating:hover{background-color:#ffab40}
     .btn-floating .fa{margin:0!important}
